# timeteller

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/timeteller/: __init__.py  _cli_entry.py  cli.py  core.py  ext.py  stdlib.py
tests/: conftest.py  smoke_test.py  test_core.py  test_ext.py  test_project.py  test_stdlib.py
